--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -709,9 +709,9 @@ Some command-line options make the stub parser issue more warnings:
   other classes from the same package are present.
   Useful if a package spans more than one jar.
 
-\item[\<-AstubWarnIfOverridesBytecode>]
+\item[\<-AstubWarnIfOverwritesBytecode>]
   Warn whenever some element of a
-  stub file overrides annotations contained in bytecode.
+  stub file overwrites annotations contained in bytecode.
 \end{description}
 
 Finally,
@@ -778,7 +778,7 @@ read whether the library's annotations are parsed.
 %%  LocalWords:  AuseSafeDefaultsForUnannotatedSourceCode TypeSystem1 cd
 %%  LocalWords:  TypeSystem2 TypeSystem3 AuseDefaultsForUncheckedCode ln
 %  LocalWords:  mychecker DIRS README TypeSystem un debugJSR org boolean
-%  LocalWords:  AstubWarnIfOverridesBytecode Awarns AssumeAssertion
+%  LocalWords:  AstubWarnIfOverwritesBytecode Awarns AssumeAssertion
 %%  LocalWords:  Makefile buildJdk PuseLocalJdk jdkShaHash AonlyDefs
 %%  LocalWords:  AuseDefaultsForUncheckedCodesource
 %%  LocalWords:  AstubWarnIfNotFoundIgnoresClasses
