--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -741,8 +741,8 @@ Partially-annotated libraries
   Warn if a stub file entry could not be found; see Section~\ref{stub-using}.
 \item \<-AstubWarnIfNotFoundIgnoresClasses>
   Don't warn about missing classes (only methods and fields) even when \<-AwarnIfNotFound> is true.
-\item \<-AstubWarnIfOverridesBytecode>
-  Warn if a stub file entry overrides bytecode information; see
+\item \<-AstubWarnIfOverwritesBytecode>
+  Warn if a stub file entry overwrite bytecode information; see
   Section~\ref{stub-using}.
 \item \<-AstubWarnIfRedundantWithBytecode>
   Warn if a stub file entry is redundant with bytecode information; see
@@ -1504,7 +1504,7 @@ same methodology in different words.
 %%  LocalWords:  AuseSafeDefaultsForUnannotatedSourceCode beingConstructed
 %%  LocalWords:  AuseDefaultsForUncheckedCode AresolveReflection Ainfer
 %%  LocalWords:  AconservativeUninferredTypeArguments Averbosecfg Acfgviz
-%%  LocalWords:  AstubWarnIfOverridesBytecode AprintVerboseGenerics
+%%  LocalWords:  AstubWarnIfOverwritesBytecode AprintVerboseGenerics
 %%  LocalWords:  AatfDoNotCache AatfCacheSize IntRange AwarnIfNotFound
 %%  LocalWords:  AwarnUnneededSuppressions AshowInferenceSteps BHCJEIBB
 %%  LocalWords:  AstubWarnIfNotFoundIgnoresClasses processOptions getopt
