--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -712,10 +712,9 @@ Type-checking modes:  enable/disable functionality
   Output suggested annotations for method signatures and fields.
   These annotations may reduce the number of type-checking
   errors when running type-checking in the future; see
-  Section~\ref{whole-program-inference}. This argument optionally
-  takes an argument to specify the format of its output. By default,
-  it outputs to .jaif files. "-Ainfer=stubs" will cause it to write
-  its outputs to .astub files, instead.
+  Section~\ref{whole-program-inference}.
+  Using \<-Ainfer> produces \<.jaif> files.
+  Using \<-Ainfer=stubs> produces \<.astub> files.
 \item \<-AshowSuppressWarningKeys>
   With each warning, show all possible keys to suppress that warning.
 \item \<-AwarnUnneededSuppressions>
@@ -752,8 +751,8 @@ Partially-annotated libraries
   Section~\ref{stub-using}.
 \item \<-AmergeStubsWithSource>
   If both a stub file and a source file for a class are available,
-  use the stronger type from the two. This flag overrides the default
-  behavior, which is to ignore the stub file.
+  use the stronger type from the two. The default behavior (without the
+  flag) is to ignore types from the stub file if source is available.
 % This item is repeated above:
 \item \<-AuseDefaultsForUncheckedCode=source>
   Outside the scope of any relevant
