--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -1882,7 +1882,7 @@ initialization was actually complete, then the receiver should have type
 
 \subsectionAndLabel{Suppressing warnings}{initialization-checking-suppressing-warnings}
 
-To suppress most warnings related partially-initialized values, use the
+To suppress most warnings related to partially-initialized values, use the
 ``initialization.''~(note the trailing period) warning suppression key.  You
 can write \<@SuppressWarnings("initialization.")> on a field, constructor, or
 class, or pass the command-line argument
