Revert "Merge branch 'ignoreDepreatedInStubs' into issue2878"
This reverts commit c1b17aefa58e468e0939b7f2dc17db22a1b35fca, reversing
changes made to 91267ab9801f35807bfd4ac62120ff1cbedaa072.

--- a/docs/manual/warnings.tex
+++ b/docs/manual/warnings.tex
@@ -593,8 +593,7 @@ are type-checking the whole thing.
 
 The \code{-Alint} option enables or disables optional checks, analogously to
 javac's \code{-Xlint} option.
-Each of the distributed checkers supports at least the following lint
-options (and possibly more, see the checker's documentation):
+Each of the distributed checkers supports at least the following lint options:
 
 % For the current list of lint options supported by all checkers, see
 % method BaseTypeChecker.getSupportedLintOptions().
