--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -537,7 +537,7 @@ Use the \<-AstubWarnIfRedundantWithBytecode> command-line option to get
 a warning whenever a stub file specification is redundant with
 bytecode annotations.
 
-By default, a file being compiled takes precedence over a stub file:  if
+By default, a source file being compiled takes precedence over a stub file:  if
 file \<A.java> is being compiled, then any stub for class \<A> is ignored.
 The command-line option \<-AmergeStubsWithSource> tells the checker to take
 the greatest lower bound (GLB) of the type in the stub file and the type in
