--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -820,7 +820,7 @@ checker is an ``annotation processor''.
 \item \<-processor> Names the checker to be
   run; see Sections~\ref{running} and~\ref{shorthand-for-checkers}.
   May be a comma-separated list of multiple cehckers.  Note that javac
-  stops processing an indeterminate soon after detecting an error.  When
+  stops processing an indeterminate time after detecting an error.  When
   providing multiple checkers, if one checker detects any error, subsequent
   checkers may not run.
 \item \<-processorpath> Indicates where to search for the
