--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -1521,3 +1521,5 @@ same methodology in different words.
 %%  LocalWords:  AstubWarnIfNotFoundIgnoresClasses processOptions getopt
 %%  LocalWords:  EnsuresNonNull EnsuresNonNullIf checkername orElseThrow
 %%  LocalWords:  ArequirePrefixInWarningSuppressions MaybePresent
+% LocalWords:  AignoreInvalidAnnotationLocations AprintGitProperties
+% LocalWords:  AstubWarnIfRedundantWithBytecode
