--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@ Command-line option -AprintGitProperties prints information about the git
 repository from which the Checker Framework was compiled.
 
 Implementation details:
- * Deprecated MultiGraphQualifierHierarchy#getTypeQualifiers.
+ * Deprecated QualifierHierarchy#getTypeQualifiers.
 
 ---------------------------------------------------------------------------
 
